remove underline, fix Time Turner to Time-Turner, hyphenation

--- a/hp-header.tex
+++ b/hp-header.tex
@@ -271,7 +271,8 @@
 %
 \hyphenation{Gryf-fin-dor Huf-fle-puff Sly-the-rin Wi-zen-ga-mot
 McGon-a-gall Dum-ble-dore Malfoy Potter Her-mione Flit-wick
-Vol-de-mort Le-strange Gil-deroy Scour-gify
+Vol-de-mort Le-strange Gil-deroy Scour-gify Sev-erus
 Alo-ho-mora Mun-dun-gus Hogs-meade Nym-pha-dora
 Ver-i-ta-serum Tre-lawney Az-ka-ban Poly-juice Sirius basi-lisk
-Phi-neas McKin-non Filius Quiri-nus Love-good whom-ever}
+Phi-neas McKin-non Filius Quiri-nus Love-good whom-ever
+Gryf-fin-dors Huf-fle-puffs Sly-the-rins}
